force-app/main/default/objects/LMS_Training_Unit__c/LMS_Training_Unit__c.object-meta.xml
<CustomObject>
    <label>LMS Training Unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Training Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Training Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>