force-app/main/default/objects/LMS_Training_Unit__c/fields/LMS_Active__c.field-meta.xml
<CustomField>
    <fullName>LMS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>