force-app/main/default/objects/LMS_Training_Unit__c/fields/LMS_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Content_Document_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>