force-app/main/default/objects/LMS_Training_Unit__c/fields/LMS_Title__c.field-meta.xml
<CustomField>
    <fullName>LMS_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>