force-app/main/default/objects/LMS_Training_Unit__c/fields/LMS_Training__c.field-meta.xml
<CustomField>
    <fullName>LMS_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>LMS_Training__c</referenceTo>
    <relationshipLabel>Training Units</relationshipLabel>
    <relationshipName>Training_Units</relationshipName>
    <type>Lookup</type>
</CustomField>