force-app/main/default/objects/LMS_Training_Unit__c/fields/LMS_Type__c.field-meta.xml
<CustomField>
    <fullName>LMS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>PowerPoint</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>